fixed mobile header btn spacing

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -112,4 +112,7 @@
 @media only screen and (max-width: 480px) {
 	section { padding: 25px 0; }
 	.contact-form { width: 100%; }
+	.hero-text-box .btn {
+		margin-top: 10px;
+	}
 }
